--- a/templates/index2v2.html
+++ b/templates/index2v2.html
@@ -18,7 +18,7 @@
       Choose between total consumption or consumptions per capita.
       <input type="radio" name="data-type" value="emissions" checked>
       <label>Consumption</label>
-      <input type="radio" name="data-type" value="emissionsPerCapita">
+      <input type="radio" name="data-type" value="BeefConsumptionPerCapita">
       <label>Consumption Per Capita</label>
     </p>
     <p> <a href="/">Click here</a> to explore the relationship between meat consumption and methane emissions.
