--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,6 @@
   <script src="../static/pie.js"></script>
   <script src="../static/bar.js"></script>
   <script src="../static/map.js"></script>
-  <script src="../static/appv3.js"></script>
+  <script src="../static/app.js"></script>
 </body>
 </html>
